--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Project specific
+uploads/
+*.fcs
+*.db
+alembic/versions/*.py
+!alembic/versions/.gitkeep
