Update docker-compose.yml with RATE_LIMIT_PER_MINUTE environment

--- a/.env
+++ b/.env
@@ -19,6 +19,9 @@ APP_NAME="PAT Permission System"
 APP_VERSION=0.1.0
 CORS_ORIGINS=["http://localhost:3000","http://localhost:8000"]
 
+# Rate Limiting
+RATE_LIMIT_PER_MINUTE=120
+
 # pgAdmin Configuration (optional)
 PGADMIN_EMAIL=admin@example.com
 PGADMIN_PASSWORD=admin
